--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,4 +17,6 @@ messages:
   on-place: "&#CD1818[🗡] &fК сожалению, но вы &#CD1818не можете&f ставить &#CD1818Эндер Сундук&f в режиме &#CD1818PvP!"
   # Сообщение когда игрок пытается использовать эндер-сундук в режиме пвп
   on-interact: "&#CD1818[🗡] &fК сожалению, но вы &#CD1818не можете&f использовать &#CD1818Эндер Сундук&f в режиме &#CD1818PvP!"
+  no-perms: "&cУ вас недостаточно прав!"
+  reload: '&aКонфиг перезагружен!'
 
